--- a/Sqlite_DB/login.ui
+++ b/Sqlite_DB/login.ui
@@ -17,15 +17,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>530</y>
+      <x>40</x>
+      <y>540</y>
       <width>411</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>13</pointsize>
+      <pointsize>12</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -36,10 +36,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>90</y>
-      <width>431</width>
-      <height>441</height>
+      <x>590</x>
+      <y>110</y>
+      <width>411</width>
+      <height>431</height>
      </rect>
     </property>
     <property name="font">
@@ -50,14 +50,17 @@
      </font>
     </property>
     <property name="title">
-     <string>                       Login for Admin</string>
+     <string>Login for Admin</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>360</y>
-       <width>111</width>
+       <x>160</x>
+       <y>340</y>
+       <width>121</width>
        <height>41</height>
       </rect>
      </property>
@@ -76,9 +79,9 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>70</y>
-       <width>111</width>
-       <height>41</height>
+       <y>60</y>
+       <width>101</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="font">
@@ -96,7 +99,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>220</y>
+       <y>190</y>
        <width>81</width>
        <height>31</height>
       </rect>
@@ -115,9 +118,9 @@
     <widget class="QLineEdit" name="lineEdit_username">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>120</y>
-       <width>241</width>
+       <x>70</x>
+       <y>100</y>
+       <width>281</width>
        <height>41</height>
       </rect>
      </property>
@@ -131,14 +134,17 @@
      <property name="placeholderText">
       <string>Username</string>
      </property>
+     <property name="clearButtonEnabled">
+      <bool>true</bool>
+     </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit_password">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>270</y>
-       <width>251</width>
-       <height>51</height>
+       <x>70</x>
+       <y>230</y>
+       <width>281</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -154,20 +160,23 @@
      <property name="placeholderText">
       <string>Password</string>
      </property>
+     <property name="clearButtonEnabled">
+      <bool>true</bool>
+     </property>
     </widget>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>-10</y>
+      <x>363</x>
+      <y>20</y>
       <width>401</width>
-      <height>61</height>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>17</pointsize>
+      <pointsize>16</pointsize>
       <bold>true</bold>
       <underline>true</underline>
      </font>
@@ -179,30 +188,52 @@
    <widget class="QLabel" name="label_pic">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>120</y>
-      <width>301</width>
-      <height>331</height>
+      <x>130</x>
+      <y>100</y>
+      <width>501</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>210</y>
+      <width>41</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>log.jpg</pixmap>
+     <pixmap resource="img.qrc">:/img/img/login.jfif</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
-   <widget class="Line" name="line">
+   <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>60</y>
-      <width>20</width>
-      <height>551</height>
+      <x>600</x>
+      <y>340</y>
+      <width>41</width>
+      <height>41</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="img.qrc">:/img/img/password.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -212,12 +243,14 @@
      <x>0</x>
      <y>0</y>
      <width>1065</width>
-     <height>25</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="img.qrc"/>
+ </resources>
  <connections/>
 </ui>
